--- a/package.json
+++ b/package.json
@@ -14,37 +14,36 @@
     "@mdx-js/react": "^1.6.22",
     "@reach/router": "^1.3.4",
     "@tailwindcss/forms": "^0.3.3",
-    "gatsby": "^3.0.1",
-    "gatsby-image": "^3.5.0",
-    "gatsby-plugin-catch-links": "^3.0.0",
-    "gatsby-plugin-feed": "^3.0.0",
-    "gatsby-plugin-google-analytics": "^3.14.0",
-    "gatsby-plugin-image": "^1.1.0",
-    "gatsby-plugin-lodash": "^4.0.0",
-    "gatsby-plugin-manifest": "^3.0.0",
-    "gatsby-plugin-mdx": "^2.4.0",
-    "gatsby-plugin-netlify": "^3.14.0",
-    "gatsby-plugin-netlify-cms": "^5.0.0",
-    "gatsby-plugin-nprogress": "^3.0.0",
-    "gatsby-plugin-offline": "^4.0.0",
-    "gatsby-plugin-react-helmet": "^4.0.0",
+    "decap-cms-app": "^3.1.11",
+    "gatsby": "^5.13.7",
+    "gatsby-plugin-catch-links": "^5.13.1",
+    "gatsby-plugin-decap-cms": "^4.0.4",
+    "gatsby-plugin-feed": "^5.13.1",
+    "gatsby-plugin-google-analytics": "^5.13.1",
+    "gatsby-plugin-image": "^3.13.1",
+    "gatsby-plugin-lodash": "^6.13.1",
+    "gatsby-plugin-manifest": "^5.13.1",
+    "gatsby-plugin-mdx": "^5.13.1",
+    "gatsby-plugin-netlify": "^5.1.1",
+    "gatsby-plugin-nprogress": "^5.13.1",
+    "gatsby-plugin-offline": "^6.13.2",
+    "gatsby-plugin-react-helmet": "^6.13.1",
     "gatsby-plugin-remove-fingerprints": "0.0.2",
-    "gatsby-plugin-sharp": "^3.5.0",
-    "gatsby-plugin-sitemap": "^3.0.0",
-    "gatsby-plugin-twitter": "^3.0.0",
-    "gatsby-remark-autolink-headers": "^3.0.0",
-    "gatsby-remark-copy-linked-files": "^3.0.0",
-    "gatsby-remark-images": "^4.2.0",
-    "gatsby-remark-prismjs": "^4.0.0",
-    "gatsby-remark-relative-images": "^2.0.2",
-    "gatsby-remark-responsive-iframe": "^3.0.0",
-    "gatsby-source-filesystem": "^3.0.0",
-    "gatsby-transformer-sharp": "^3.1.0",
+    "gatsby-plugin-sharp": "^5.13.1",
+    "gatsby-plugin-sitemap": "^6.13.1",
+    "gatsby-plugin-twitter": "^5.13.1",
+    "gatsby-remark-autolink-headers": "^6.13.1",
+    "gatsby-remark-copy-linked-files": "^6.13.1",
+    "gatsby-remark-images": "^7.13.1",
+    "gatsby-remark-prismjs": "^7.13.1",
+    "gatsby-remark-relative-images": "^2.0.5",
+    "gatsby-remark-responsive-iframe": "^6.13.1",
+    "gatsby-source-filesystem": "^5.13.1",
+    "gatsby-transformer-sharp": "^5.13.1",
     "i": "^0.3.6",
     "jquery": "^3.6.0",
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
-    "netlify-cms-app": "^2.14.26",
     "prismjs": "^1.23.0",
     "pure-react-carousel": "^1.27.6",
     "query-string": "^7.0.0",
@@ -73,7 +72,7 @@
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-react": "^7.22.0",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "gatsby-plugin-postcss": "^4.3.0",
+    "gatsby-plugin-postcss": "^6.13.1",
     "gh-pages": "^3.1.0",
     "postcss": "^8.2.10",
     "prettier": "^2.2.1",
@@ -114,6 +113,6 @@
     ]
   },
   "engines": {
-    "node": "<=16.15.1"
+    "node": "<=20.11.0"
   }
 }
